= CHANGES

== 0.9.11 (Unreleased)

* Fixed a problem when reloading apps
* Fixed MongoId adapter using git legacy branch instead (un)stable gem
* Moved bundler dependency from padrino-core to padrino-gen
* Moved I18n dependency from padrino-core to padrino-helpers
* Use 'mail' library and remove 'tmail' dependency for padrino-mailer
* Add support for a quick 'email' helper for delivering mail in padrino-mailer
* Replaces old mailer syntax with a more consistent dsl
* Allow default rendering options to be changed [Thanks to Skade]
* Fix ensure to load database conf before everything
* Prevent htm, html mismatch in content_type [Thanks to Skade]
* Fixed issue with rake test tasks
* Fixes an issue with trailing delimiters for index controller actions (i.e /posts/)
* Fixes issue with sequel in admin gem
* Fixes error_messages_for to use humanized attribute
* Fixes indentation issues for orm generators
* Added Ukrainian translation [Thanks to Mama]
* Added Spanish translation [Thanks to Alvaro]
* Fixes issue with invalid field names

== 0.9.10

* Fixed DM Migration Issue with Text, Boolean etc... [Thanks to Snusnu and Akzhan]
* Fixed Issue with deploying Padrino apps to a Sub-URI
* Fixed padrino g and padrino gen aliases
* Refactored padrino-gen internals
* Colorized logs
* Added support for 'rake routes' task
* Disabled sessions by defaults as Sinatra do
* Enable sessions for admin app since authentication require it
* Don't load Rack::Logger if our log_level is not :debug
* Set real values for app.public and app.static because due to frequently calls
* Updated templates with new changes
* Performance tuning: Caching layout template
* Fixed a bug with layouts that prevent double rendering
* Added Scoped filters
* Added Scoped layout
* Our routing system now with :provides or :respond_to (other than route format) match "request.accept"
* Our routes now accepts Sinatra 1.0 conditions
* Routing refactoring
* Now mounter use the our new Router instead of Rack::Builder