@@ -22,12 +22,15 @@ module Padrino
     #
     DEFAULT_RENDERING_OPTIONS = { :strict_format => false, :raise_exceptions => true }
 
-    def self.registered(app)
-      app.send(:include, Padrino::Rendering)
-    end
-
-    def self.included(base)
-      base.extend(ClassMethods)
+    ##
+    # Main class that register this extension
+    #
+    class << self
+      def registered(app)
+        app.send(:include, InstanceMethods)
+        app.extend(ClassMethods)
+      end
+      alias :included :registered
     end
 
     module ClassMethods
@@ -75,110 +78,112 @@ module Padrino
       end
     end
 
-    private
-      ##
-      # Enhancing Sinatra render functionality for:
-      #
-      # * Using layout similar to rails
-      # * Use render 'path/to/my/template'   (without symbols)
-      # * Use render 'path/to/my/template'   (with engine lookup)
-      # * Use render 'path/to/template.haml' (with explicit engine lookup)
-      # * Use render 'path/to/template', :layout => false
-      # * Use render 'path/to/template', :layout => false, :engine => 'haml'
-      # * Use render { :a => 1, :b => 2, :c => 3 } # => return a json string
-      #
-      def render(engine, data=nil, options={}, locals={}, &block)
-        # If engine is a hash then render data converted to json
-        return engine.to_json if engine.is_a?(Hash)
+    module InstanceMethods
+      private
+        ##
+        # Enhancing Sinatra render functionality for:
+        #
+        # * Using layout similar to rails
+        # * Use render 'path/to/my/template'   (without symbols)
+        # * Use render 'path/to/my/template'   (with engine lookup)
+        # * Use render 'path/to/template.haml' (with explicit engine lookup)
+        # * Use render 'path/to/template', :layout => false
+        # * Use render 'path/to/template', :layout => false, :engine => 'haml'
+        # * Use render { :a => 1, :b => 2, :c => 3 } # => return a json string
+        #
+        def render(engine, data=nil, options={}, locals={}, &block)
+          # If engine is a hash then render data converted to json
+          return engine.to_json if engine.is_a?(Hash)
 
-        # Data can actually be a hash of options in certain cases
-        options.merge!(data) && data = nil if data.is_a?(Hash)
+          # Data can actually be a hash of options in certain cases
+          options.merge!(data) && data = nil if data.is_a?(Hash)
 
-        # If an engine is a string then this is a likely a path to be resolved
-        data, engine = *resolve_template(engine, options) if data.nil?
+          # If an engine is a string then this is a likely a path to be resolved
+          data, engine = *resolve_template(engine, options) if data.nil?
 
-        # Sinatra 1.0 requires an outvar for erb and erubis templates
-        options[:outvar] ||= '@_out_buf' if [:erb, :erubis] & [engine]
+          # Sinatra 1.0 requires an outvar for erb and erubis templates
+          options[:outvar] ||= '@_out_buf' if [:erb, :erubis] & [engine]
 
-        # Resolve layouts similar to in Rails
-        if (options[:layout].nil? || options[:layout] == true) && !settings.templates.has_key?(:layout)
-          options[:layout] = resolved_layout || false # We need to force layout false so sinatra don't try to render it
-          logger.debug "Resolving layout #{options[:layout]}" if defined?(logger) && options[:layout].present?
+          # Resolve layouts similar to in Rails
+          if (options[:layout].nil? || options[:layout] == true) && !settings.templates.has_key?(:layout)
+            options[:layout] = resolved_layout || false # We need to force layout false so sinatra don't try to render it
+            logger.debug "Resolving layout #{options[:layout]}" if defined?(logger) && options[:layout].present?
+          end
+
+          # Pass arguments to Sinatra render method
+          super(engine, data, options.dup, locals, &block)
         end
 
-        # Pass arguments to Sinatra render method
-        super(engine, data, options.dup, locals, &block)
-      end
-
-      ##
-      # Returns the located layout to be used for the rendered template (if available)
-      #
-      # ==== Example
-      #
-      # resolve_layout(true)
-      # => "/layouts/custom"
-      #
-      def resolved_layout
-        located_layout = resolve_template(settings.fetch_layout_path, :strict_format => true, :raise_exceptions => false)
-        located_layout ? located_layout[0] : false
-      end
-
-      ##
-      # Returns the template path and engine that match content_type (if present), I18n.locale.
-      #
-      # === Options
-      #
-      #   :strict_format::  The resolved template must match the content_type of the request (defaults to false)
-      #   :raise_exceptions::  Raises a +TemplateNotFound+ exception if the template cannot be located.
-      #
-      # ==== Example
-      #
-      #   get "/foo", :respond_to => [:html, :js] do; render 'path/to/foo'; end
-      #   # If you request "/foo.js" with I18n.locale == :ru => [:"/path/to/foo.ru.js", :erb]
-      #   # If you request "/foo" with I18n.locale == :de => [:"/path/to/foo.de.haml", :haml]
-      #
-      def resolve_template(template_path, options={})
-        # Fetch cached template for rendering options
-        template_path = "/#{template_path}" unless template_path.to_s[0] == ?/
-        rendering_options = [template_path, content_type, locale]
-        cached_template = settings.fetch_template_file(rendering_options)
-        return cached_template if cached_template
-
-        # Resolve view path and options
-        options.reverse_merge!(DEFAULT_RENDERING_OPTIONS)
-        view_path = options.delete(:views) || settings.views || settings.views || "./views"
-        target_extension = File.extname(template_path)[1..-1] || "none" # retrieves explicit template extension
-        template_path = template_path.chomp(".#{target_extension}")
-
-        # Generate potential template candidates
-        templates = Dir[File.join(view_path, template_path) + ".*"].map do |file|
-          template_engine = File.extname(file)[1..-1].to_sym # retrieves engine extension
-          template_file   = file.sub(view_path, '').chomp(".#{template_engine}").to_sym # retrieves template filename
-          [template_file, template_engine] unless IGNORE_FILE_PATTERN.any? { |pattern| template_engine.to_s =~ pattern }
+        ##
+        # Returns the located layout to be used for the rendered template (if available)
+        #
+        # ==== Example
+        #
+        # resolve_layout(true)
+        # => "/layouts/custom"
+        #
+        def resolved_layout
+          located_layout = resolve_template(settings.fetch_layout_path, :strict_format => true, :raise_exceptions => false)
+          located_layout ? located_layout[0] : false
         end
 
-        # Check if we have a valid content type
-        valid_content_type = [:html, :plain].include?(content_type)
+        ##
+        # Returns the template path and engine that match content_type (if present), I18n.locale.
+        #
+        # === Options
+        #
+        #   :strict_format::  The resolved template must match the content_type of the request (defaults to false)
+        #   :raise_exceptions::  Raises a +TemplateNotFound+ exception if the template cannot be located.
+        #
+        # ==== Example
+        #
+        #   get "/foo", :respond_to => [:html, :js] do; render 'path/to/foo'; end
+        #   # If you request "/foo.js" with I18n.locale == :ru => [:"/path/to/foo.ru.js", :erb]
+        #   # If you request "/foo" with I18n.locale == :de => [:"/path/to/foo.de.haml", :haml]
+        #
+        def resolve_template(template_path, options={})
+          # Fetch cached template for rendering options
+          template_path = "/#{template_path}" unless template_path.to_s[0] == ?/
+          rendering_options = [template_path, content_type, locale]
+          cached_template = settings.fetch_template_file(rendering_options)
+          return cached_template if cached_template
 
-        # Resolve final template to render
-        located_template =
-          templates.find { |file, e| file.to_s == "#{template_path}.#{locale}.#{content_type}" } ||
-          templates.find { |file, e| file.to_s == "#{template_path}.#{locale}" && valid_content_type } ||
-          templates.find { |file, e| File.extname(file.to_s) == ".#{target_extension}" or e.to_s == target_extension.to_s } ||
-          templates.find { |file, e| file.to_s == "#{template_path}.#{content_type}" } ||
-          templates.find { |file, e| file.to_s == "#{template_path}" && valid_content_type } ||
-          templates.any? && !options[:strict_format] && templates.first # If not strict, fall back to the first located template
+          # Resolve view path and options
+          options.reverse_merge!(DEFAULT_RENDERING_OPTIONS)
+          view_path = options.delete(:views) || settings.views || settings.views || "./views"
+          target_extension = File.extname(template_path)[1..-1] || "none" # retrieves explicit template extension
+          template_path = template_path.chomp(".#{target_extension}")
 
-        settings.cache_template_file!(located_template, rendering_options) unless settings.reload_templates?
-        raise TemplateNotFound, "Template path '#{template_path}' could not be located in '#{view_path}'!" if !located_template && options[:raise_exceptions]
-        located_template
-      end
+          # Generate potential template candidates
+          templates = Dir[File.join(view_path, template_path) + ".*"].map do |file|
+            template_engine = File.extname(file)[1..-1].to_sym # retrieves engine extension
+            template_file   = file.sub(view_path, '').chomp(".#{template_engine}").to_sym # retrieves template filename
+            [template_file, template_engine] unless IGNORE_FILE_PATTERN.any? { |pattern| template_engine.to_s =~ pattern }
+          end
 
-      ##
-      # Return the I18n.locale if I18n is defined
-      #
-      def locale
-        I18n.locale if defined?(I18n)
-      end
+          # Check if we have a valid content type
+          valid_content_type = [:html, :plain].include?(content_type)
+
+          # Resolve final template to render
+          located_template =
+            templates.find { |file, e| file.to_s == "#{template_path}.#{locale}.#{content_type}" } ||
+            templates.find { |file, e| file.to_s == "#{template_path}.#{locale}" && valid_content_type } ||
+            templates.find { |file, e| File.extname(file.to_s) == ".#{target_extension}" or e.to_s == target_extension.to_s } ||
+            templates.find { |file, e| file.to_s == "#{template_path}.#{content_type}" } ||
+            templates.find { |file, e| file.to_s == "#{template_path}" && valid_content_type } ||
+            templates.any? && !options[:strict_format] && templates.first # If not strict, fall back to the first located template
+
+          settings.cache_template_file!(located_template, rendering_options) unless settings.reload_templates?
+          raise TemplateNotFound, "Template path '#{template_path}' could not be located in '#{view_path}'!" if !located_template && options[:raise_exceptions]
+          located_template
+        end
+
+        ##
+        # Return the I18n.locale if I18n is defined
+        #
+        def locale
+          I18n.locale if defined?(I18n)
+        end
+    end # InstanceMethods
   end # Rendering
 end # Padrino
